# FiapTechChallengeFase3

./: .env  .gitignore  Cargo.toml  CreateAndInitDatabase.sql  Dockerfile  LICENSE  README.md  TechChallengeFase2.postman_collection.json  docker-compose-kafka.yml  docker-compose.yml  init-db.sh  mercado_pago_tester.txt
k8s/: 00-metrics-components.yaml  01-secret.yml  02-deployment.yml  03-service.yml  04-hpa.yml
src/: main.rs
src/application/: mod.rs
src/application/client/: get_client_by_cpf.rs  mod.rs  set_client.rs
src/application/order/: create_order.rs  get_order_by_id.rs  get_orders_by_status.rs  mod.rs  update_order_status.rs
src/application/order_product/: delete_order_product.rs  mod.rs  put_order_product.rs
src/application/payment/: mercado_pago_notification.rs  mod.rs  start_payment.rs
src/application/product/: get_products_by_category.rs  mod.rs  put_product.rs
src/application/product_category/: delete_product_category.rs  get_product_categories.rs  mod.rs  put_product_category.rs
src/application/user/: get_user_by_cpf.rs  mod.rs  set_user.rs
src/controllers/handlers/: client.rs  mod.rs  order.rs  order_product.rs  payment.rs  product.rs  product_category.rs  user.rs
src/controllers/models/: client.rs  mod.rs  order.rs  order_product.rs  payment.rs  product.rs  product_category.rs  user.rs
src/controllers/routes/: client.rs  mod.rs  order.rs  order_product.rs  payment.rs  product.rs  product_category.rs  user.rs
src/domain/: mod.rs
src/domain/constants/: mod.rs  user_group.rs
src/infrastructure/: mod.rs
test/k6/: load_test.js
(+96 files in other folders)
