[package]
name = "FiapTechChallengeFase1"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
actix-web = "4"
async-trait = "0.1.60"
sqlx = { version = "0.5.13", default-features = false, features = ["runtime-tokio-rustls", "mssql", "macros"] }
tokio = { version = "1", features = ["full"] }
once_cell = "1.8"
chrono = "0.4"
futures = "0.3"
rdkafka = { version = "0.29", features = ["cmake-build"] }
reqwest = { version = "0.11", features = ["json"] }

[build-dependencies]
syn = "1"